# Group-Dataset-Generator

./: .gitignore  HF_README.md  README.md  check_quaternion_data.py  cleanup_project.py  cleanup_remaining.py  examples.py  generate.py  generate_all_datasets.py  generate_individual_groups.py  generate_superset.py  generate_superset_optimized.py  history.md  load_dataset_example.py  permutation-groups.py  pyproject.toml  test_dataset_loading.py  test_simple_load.py  upload_dataset_script.py  upload_hf_readme.py  upload_individual_datasets.sh  usage_example.py
archive_temp_scripts/: all_groups_config.py  example_usage.py  list_hf_files.py  permutation-groups.py  split_supersets.py  test_direct_loading.py  upload_clean_datasets.sh  upload_with_complexity_classes.sh
docs/: ARCHITECTURE.md  CONTRIBUTING.md  HF_README.md
examples/: README.md  local_examples.py  streaming_examples.py
gdg/: __init__.py  alternating_generator.py  base_generator.py  cyclic_generator.py  dihedral_generator.py  elementary_abelian_generator.py  frobenius_generator.py  generate_all.py  klein_generator.py  mathieu_generator.py  psl_generator.py  quaternion_generator.py  symmetric_generator.py
scripts/: delete_hf_datasets.sh  upload_datasets.sh  upload_datasets_optimized.sh
tests/: test_alternating.py  test_base.py  test_base_individual.py  test_cyclic.py  test_cyclic_individual.py  test_data_correctness.py  test_dihedral.py  test_dihedral_individual.py  test_elementary_abelian.py  test_elementary_abelian_individual.py  test_frobenius.py  test_frobenius_individual.py  test_generate.py  (+11 more)
(+22 files in other folders)
