[project]
name = "Group-Dataset-Generator"
version = "0.1.0"
description = "A script to generate permutation composition datasets."
dependencies = [
    "sympy",
    "datasets",
    "huggingface_hub",
    "tqdm",
    "pandas",
    "pyarrow",
    "numba>=0.61.2",
    "ruff>=0.12.2",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
exclude = ["a5_data", "s3_data", "s4_data", "s5_data"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
addopts = "-v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
